# static/api/swagger.yaml
@@ -21,9 +21,24 @@ components:
       properties:
         id:
           type: string
-        timestamp:
+        date:
           type: integer
           format: date-time
+        time:
+          type: object
+          properties:
+            EU:
+              type: integer
+              format: date-time
+            US:
+              type: integer
+              format: date-time
+            WA:
+              type: integer
+              format: date-time
+            EA:
+              type: integer
+              format: date-time
       required:
         - id
         - timestamp
